# TX_project

./: .gitignore  README.md
Allen_scoping/: README.md  field_and_trajectories.py  (+1 more)
archive/track-extrapolation-pinn/For_Allen/: .gitignore  .pre-commit-config.yaml  ACCEPTANCE.md  CHANGELOG.md  ENVIRONMENT.md  PLAN.md  README.md  pyproject.toml
archive/track-extrapolation-pinn/For_Allen/artifacts/phase1a/: J_rk4_reference.npy  J_rk4_reference_weakfield_2026-05-12.npy  X_a4.npy  X_a4_weakfield_2026-05-12.npy  a4_reference_meta.json
archive/track-extrapolation-pinn/For_Allen/configs/: README.md
archive/track-extrapolation-pinn/For_Allen/docs/decisions/: 0001-experiment-reviewer-audit.md  0002-action-N-corrector-removed.md  0003-multistep-rk4-mandatory.md  0004-event-grouped-splits.md  0005-frozen-test-set.md  0006-allen-exercise-pr.md  0007-phase1a-winner.md  0008-allen-wiring-plan.md  0009-replacement-goal-restated.md
archive/track-extrapolation-pinn/For_Allen/exercise_pr/: 0001-Kalman-add-NRKExtrapolator-skeleton-with-Catch2-unit.patch  standalone_test_nrk.cpp
archive/track-extrapolation-pinn/For_Allen/pins/: README.md  allen_commit.txt  baseline_throughput.txt  loader_v3_spec.md  protocol_sha.txt
archive/track-extrapolation-pinn/For_Allen/scripts/: README.md  capture_host.py  emit_cuda_header.py  hash_data.py  phase1a_arch_ablation.py  sanity_check.py
archive/track-extrapolation-pinn/For_Allen/src/for_allen/: README.md  __init__.py
archive/track-extrapolation-pinn/For_Allen/tests/: test_blob_roundtrip.py  test_cuda_header_parity.py  test_tag_guard.py
(+301 files in other folders)
